Fix text-decoration for links, blog page and right-align fixed sidebar

--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@
       text-decoration: none;
       border-bottom: 1px solid #eeeeee; }
 
+.format_text a {
+  text-decoration: none; }
+  .format_text a:hover {
+    text-decoration: none; }
+
 ::selection {
   background: #eeeeee;
   color: #f9f9f9; }
@@ -31,9 +36,9 @@
   padding-bottom: 6em; }
 
 #logo a {
-  background: url("images/king-sidharth-logo.png") top left no-repeat;
+  background: url("images/king-sidharth-logo.png") top right no-repeat;
   display: block;
-  width: 200px;
+  width: 220px;
   height: 28px;
   text-indent: -9999px;
   position: fixed;
@@ -47,10 +52,18 @@
     background: none; }
 
 /* Content */
+#content_box .teasers_box {
+  padding: 0; }
+  #content_box .teasers_box .teaser {
+    width: 100%;
+    margin-bottom: 1em;
+    padding-bottom: 1em; }
+
 /* Sidebars */
 #sidebar_1 {
   margin-top: 2em;
-  position: fixed; }
+  position: fixed;
+  text-align: right; }
 
 .sidebar .widget {
   border-bottom: 1px dotted #cccccc; }
@@ -59,5 +72,5 @@
     font-variant: normal;
     font-weight: bold;
     letter-spacing: 0px; }
-  .sidebar .widget a :hover {
+  .sidebar .widget a, .sidebar .widget a:hover {
     text-decoration: none; }
